<resources>
    <string name="app_name">Student Information</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_the_stud_information">Add Student Information</string>
    <string name="name">Student Name</string>
    <string name="mobile_no">Phone</string>
    <string name="birthdata">Birth Date</string>
    <string name="address">Address</string>
    <string name="submit">Add</string>
    <string name="cancel">Cancel</string>
</resources>