<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFBB86"
        tools:context=".view.AddInfoFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageUser"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:elevation="8dp"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_camera"
                        app:shapeAppearanceOverlay="@style/Circular"
                        app:strokeColor="@color/purple_500"
                        app:strokeWidth="2dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".4"
                        android:background="@android:color/darker_gray" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold|normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:hint="@string/mobile_no"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/MobileNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="12"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold|normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/birthdata"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/dataBirth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="date"
                                android:maxLines="1"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold|normal" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="Email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="25"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold|normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="start|top"
                        android:layout_margin="5dp"
                        android:gravity="start|top"
                        android:hint="@string/address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/info"
                            android:layout_width="match_parent"
                            android:layout_height="66dp"
                            android:layout_gravity="start|top"
                            android:gravity="start|top"
                            android:inputType="textEmailAddress"
                            android:maxLines="6"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold|normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/addInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:elevation="15dp"
                            android:gravity="center"
                            android:padding="20dp"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|normal"
                            app:backgroundTint="@color/black"
                            app:shapeAppearanceOverlay="@style/Button8" />

                        <Button
                            android:id="@+id/cancelBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:elevation="15dp"
                            android:gravity="center"
                            android:padding="20dp"
                            android:text="@string/cancel"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold|normal"
                            app:backgroundTint="@color/white"
                            app:shapeAppearanceOverlay="@style/Widget.AppCompat.ActionButton" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </ScrollView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40in"
            android:layout_height="1.6in"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/studinfo" />


    </RelativeLayout>



</layout>